--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
-<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Resume Front End Developer Position</title><link rel="shortcut icon" type="image/x-icon" href="img/fav.ico"> <link rel="stylesheet" href="css/bootstrap.min.css"> <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> <link href="https://fonts.googleapis.com/css?family=Roboto|Pavanam" rel="stylesheet"> <link rel="stylesheet" href="css/custom.css"></head><body> <section class="header"> <div class="container inline"> <div class="left-detail inline"> <img class="profile-pic" src="./img/brand.png" alt="pic"> <div class="person"> <h1 class="title">Sudhir Kumar</h1> <p class="profile">Front End Developer</p></div></div><div class="right-detail"> <div class="address"> <p>Haridwar,India </p><p>7876212256</p><p style="text-transform: lowercase">sudhirkumarojhaa@gmail.com</p><a style="text-transform: lowercase" href="www.sudhirkumar.in" target="_blank" >sudhirkumar.in</a> </div></div></div></section> <section class="content container"> <div class="row box"> <div class="col-md-9"> <div class="main"> <div class="section-col"> <span class="content-title">Objective</span> <div class="inline-icon"> <p class="big" style="text-transform: none;">To work in a position that allows me to enhance my skills and professional knowledge. Job satisfaction is the most important driver for me to work efficiently and honestly.</p></div></div><div class="section-col"> <span class="content-title">Experience</span> <div class="inline-icon"> <i class="fas fa-briefcase"></i> <div class="side-details"> <p class="big">Front end developer</p><p class="small">Rubico IT Pvt. Ltd. | 1.5 year</p><ul class="big">Roles and Responsibilities :</ul> <li class="small">Design the template with proper alignment, Font Face, Color, Space etc.</li><li class="small">Responsible for using right/current tool/plugin/CSS/HTML for the project.</li><li class="small">Offer consultation whenever required during project life cycle</li><li class="small">Creates & Executes Unit Test Cases </li></div></div></div><div class="section-col"> <span class="content-title">Work</span> <div class="project"> <div class="inline-icon"> <i class="fas fa-desktop"></i> <div class="side-details"> <p class="big">titlee scscscsc</p><p class="small">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi inventore laboriosam corrupti incidunt expedita non exercitationem perferendis temporibus ex. Praesentium sed eaque alias accusamus, quidem consequuntur qui esse! Quasi, laudantium!</p><p class="small">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi inventore laboriosam corrupti incidunt expedita non exercitationem perferendis temporibus ex. Praesentium sed eaque alias accusamus, quidem consequuntur qui esse! Quasi, laudantium!</p></div></div><div class="btn btn-success"> <i class="fas fa-external-link-alt"></i> Explore </div></div></div></div></div><div class="col-md-3"> <div class="sidebar"> <div class="section-col"> <span class="content-title">education</span> <div class="inline-icon"> <i class="fas fa-graduation-cap"></i> <div class="side-details"> <p class="big">Master of Computer Application</p><p class="small">YMCA University of Science & Technology</p><p class="small">2014-2017</p></div></div><div class="inline-icon"> <i class="fas fa-graduation-cap"></i> <div class="side-details"> <p class="big">Bachelors of Computer Science</p><p class="small">Kurukshetra University</p><p class="small">2010-2013</p></div></div></div><div class="section-col"> <span class="content-title">skills</span> <div class="inline-icon"> <i class="fas fa-desktop"></i> <div class="side-details"> <p class="big">Web Development</p><p class="small">Responsive Design</p><p class="small">Wireframing</p><p class="small">Brain Storming</p><p class="small">JavaScript</p><p class="small">User Testing</p><p class="small">HTML</p><p class="small">CSS</p></div></div><div class="inline-icon"> <i class="fas fa-desktop"></i> <div class="side-details"> <p class="big">Mobile Development</p><p class="small">React Native</p><p class="small">Styling</p><p class="small">Research</p><p class="small">Web Component</p></div></div></div><div class="section-col"> <span class="content-title">tools & Technology</span> <div class="inline-icon"> <i class="fas fa-wrench"></i> <div class="side-details"> <p class="big">Github/gitlab</p><p class="big">Visual studio code</p><p class="big">x code</p><p class="big">adobe photoshop</p></div></div></div><div class="section-col"> <span class="content-title">Hobbies</span> <div class="inline-icon"> <i class="fas fa-coffee"></i> <div class="side-details"> <p class="big">Photography</p><p class="big">Writing</p><p class="big">Research & Development</p></div></div></div><div class="section-col"> <span class="content-title">Languages Known</span> <div class="inline-icon"> <i class="fas fa-volume-down"></i> <div class="side-details"> <p class="big">English</p><p class="big">hindi</p></div></div></div><div class="section-col"> <span class="content-title">Personal Details</span> <div class="inline-icon"> <i class="fas fa-user-alt"></i> <div class="side-details"> <p class="big">Unmarried</p><p class="big">indian</p><p class="big">27 October 1992</p></div></div></div></div></div><div class="col-md-12"> <div class="social-icons"> <a href="" target="_blank" ><i class="fab fa-facebook-f"></i></a> <a href="" target="_blank" ><i class="fab fa-medium-m"></i></a> <a href="https://www.instagram.com/navigatorkumar/" target="_blank" ><i class="fab fa-instagram"></i></a> </div></div></div></section> <script src="js/jquery.js"></script> <script src="js/bootstrap.min.js"></script> <script src="js/custom.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Resume Front End Developer Position</title>
+  <link rel="shortcut icon" type="image/x-icon" href="img/fav.ico">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Pavanam" rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
+</head>
+
+<body>
+  <section class="header">
+    <div class="container inline">
+      <div class="left-detail inline"> <img class="profile-pic" src="./img/brand.jpeg" alt="pic">
+        <div class="person">
+          <h1 class="title">Sudhir Kumar</h1>
+          <p class="profile">Front End Developer</p>
+        </div>
+      </div>
+      <div class="right-detail">
+        <div class="address">
+          <p>Haridwar,India </p>
+          <p>7876212256</p>
+          <p style="text-transform: lowercase">sudhirkumarojhaa@gmail.com</p><a style="text-transform: lowercase" href="http://sudhirkumar.in/"
+            target="_blank">sudhirkumar.in</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="content container">
+    <div class="row box">
+      <div class="col-md-9">
+        <div class="main">
+          <div class="section-col"> <span class="content-title">Objective</span>
+            <div class="inline-icon">
+              <p class="big" style="text-transform: none;">To work in a position that allows me to enhance my skills
+                and professional knowledge. Job satisfaction is the most important driver for me to work efficiently
+                and honestly.</p>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">Experience</span>
+            <div class="inline-icon"> <i class="fas fa-briefcase"></i>
+              <div class="side-details">
+                <p class="big">Front end developer</p>
+                <p class="small">Rubico IT Pvt. Ltd. | 1.5 year</p>
+                <ul class="big">Roles and Responsibilities :</ul>
+                <li class="small">Design the template with proper alignment, Font Face, Color, Space etc.</li>
+                <li class="small">Responsible for using right/current tool/plugin for the project.</li>
+                <li class="small">Offer consultation whenever required during project life cycle</li>
+                <li class="small">Create & Execute Unit Test Cases </li>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">Work</span>
+            <div class="project">
+              <div class="inline-icon"> <i class="fas fa-desktop"></i>
+                <div class="side-details">
+                  <p class="big">mediafuel *</p>
+                  <p class="small">MediaFuel is a digital marketing agency located just north of Indianapolis, Indiana
+                    in the suburbs of Fishers. </p>
+                  <p class="small">The Projet was built from scratch and was delievered in a tight timeline. Since they
+                    are a digital marketing agency, the site needed to be attractive and ambigous</p>
+                </div>
+              </div>
+              <a href="https://www.mediafuel.net/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+                Explore </a>
+            </div>
+            <div class="project">
+              <div class="inline-icon"> <i class="fas fa-desktop"></i>
+                <div class="side-details">
+                  <p class="big">A new way of life *</p>
+                  <p class="small">A New Way of Life Reentry Project provides housing, case management, pro bono legal
+                    services, advocacy and leadership
+                    development for women rebuilding their lives after prison.</p>
+                  <p class="small">The Projet was built from scratch and was designed by me. It has everything a
+                    website needs for promotion</p>
+                </div>
+              </div>
+              <a href="http://anewwayoflife.org/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+                Explore </a>
+            </div>
+            <div class="project">
+              <div class="inline-icon"> <i class="fas fa-desktop"></i>
+                <div class="side-details">
+                  <p class="big">Space war </p>
+                  <p class="small">A fun game prepared using JavaScript</p>
+                  <p class="small">It was based for website and uses keyboard integration for game play. </p>
+                </div>
+              </div>
+              <a href="https://sudhirkumarojhaa.github.io/Space-war/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+                Explore </a>
+            </div>
+            <div class="project">
+              <div class="inline-icon"> <i class="fas fa-mobile-alt"></i>
+                <div class="side-details">
+                  <p class="big">Arttiee Hybrid app *</p>
+                  <p class="small">App built in react native for location tracking for bus to make the life of students
+                    and parents easy</p>
+                  <p class="small">It was built from scratch with all the wireframes and concepts.</p>
+                </div>
+              </div>
+            </div>
+            <div class="project">
+              <div class="inline-icon"> <i class="fab fa-github"></i>
+                <div class="side-details">
+                  <p class="big">Other Work</p>
+                  <p class="small">Here is my github account link where you can find various small and big projects
+                    which were built using either React or React Native. Please click on explore to explore my github
+                    account.
+                </div>
+              </div>
+              <a class="link" href="https://github.com/sudhirkumarojhaa" target="_blank"><i class="fas fa-external-link-alt"></i>
+                Explore </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="sidebar">
+          <div class="section-col"> <span class="content-title">education</span>
+            <div class="inline-icon"> <i class="fas fa-graduation-cap"></i>
+              <div class="side-details">
+                <p class="big">Master of Computer Application</p>
+                <p class="small">YMCA University of Science & Technology</p>
+                <p class="small">2014-2017</p>
+              </div>
+            </div>
+            <div class="inline-icon"> <i class="fas fa-graduation-cap"></i>
+              <div class="side-details">
+                <p class="big">Bachelors of Computer Science</p>
+                <p class="small">Kurukshetra University</p>
+                <p class="small">2010-2013</p>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">skills</span>
+            <div class="inline-icon"> <i class="fas fa-desktop"></i>
+              <div class="side-details">
+                <p class="big">Web Development</p>
+                <p class="small">Responsive Design</p>
+                <p class="small">Wireframing</p>
+                <p class="small">Brain Storming</p>
+                <p class="small">JavaScript</p>
+                <p class="small">User Testing</p>
+                <p class="small">HTML</p>
+                <p class="small">CSS</p>
+              </div>
+            </div>
+            <div class="inline-icon"> <i class="fas fa-desktop"></i>
+              <div class="side-details">
+                <p class="big">Mobile Development</p>
+                <p class="small">React Native</p>
+                <p class="small">Ionic</p>
+                <p class="small">Styling</p>
+                <p class="small">Research</p>
+                <p class="small">Web Component</p>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">tools & Technology</span>
+            <div class="inline-icon"> <i class="fas fa-wrench"></i>
+              <div class="side-details">
+                <p class="big">Github/gitlab</p>
+                <p class="big">Visual studio code</p>
+                <p class="big">x code</p>
+                <p class="big">adobe photoshop</p>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">Hobbies</span>
+            <div class="inline-icon"> <i class="fas fa-coffee"></i>
+              <div class="side-details">
+                <p class="big">Photography</p>
+                <p class="big">Writing</p>
+                <p class="big">Research & Development</p>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">Languages Known</span>
+            <div class="inline-icon"> <i class="fas fa-volume-down"></i>
+              <div class="side-details">
+                <p class="big">English</p>
+                <p class="big">hindi</p>
+              </div>
+            </div>
+          </div>
+          <div class="section-col"> <span class="content-title">Personal Details</span>
+            <div class="inline-icon"> <i class="fas fa-user-alt"></i>
+              <div class="side-details">
+                <p class="big">Unmarried</p>
+                <p class="big">indian</p>
+                <p class="big">27 October 1992</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="social-icons"> <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a> <a href="" target="_blank"><i
+              class="fab fa-medium-m"></i></a> <a href="https://www.instagram.com/navigatorkumar/" target="_blank"><i
+              class="fab fa-instagram"></i></a> </div>
+      </div>
+    </div>
+  </section>
+  <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/custom.js"></script>
+</body>
+
+</html>
