--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
               </div>
             </div>
             <div class="project">
+              <div class="inline-icon"> <i class="fas fa-paint-brush"></i>
+                <div class="side-details">
+                <p class="big">Design</p>
+                 <p class="small">These are some designs built using HTML CSS and some of my photographs.</p>
+                 <p class="small">No design tool were used in making of these book covers.</p>
+                </div>
+              </div>
+              <a class="link" href="https://www.behance.net/gallery/69856707/Magazine-Cover-Design-(HTMLCSS)" target="_blank"><i class="fas fa-external-link-alt"></i>
+              Explore </a>
+            </div>
+
+            <div class="project">
               <div class="inline-icon"> <i class="fab fa-github"></i>
                 <div class="side-details">
                   <p class="big">Other Work</p>
