add: removed project links

--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
             <div class="project">
               <div class="inline-icon"> <i class="fas fa-desktop"></i>
                 <div class="side-details">
-                  <p class="big">mediafuel *</p>
-                  <p class="small">MediaFuel is a digital marketing agency located just north of Indianapolis, Indiana
+                  <p class="big">Digital Marketing</p>
+                  <p class="small">MediaBanks is a digital marketing agency located just north of Indianapolis, Indiana
                     in the suburbs of Fishers. </p>
                   <p class="small">The Projet was built from scratch and was delievered in a tight timeline. Since they
                     are a digital marketing agency, the site needed to be attractive and ambigous</p>
                 </div>
               </div>
-              <a href="https://www.mediafuel.net/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+              <a href="" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
                 Explore </a>
             </div>
             <div class="project">
               <div class="inline-icon"> <i class="fas fa-desktop"></i>
                 <div class="side-details">
-                  <p class="big">A new way of life *</p>
-                  <p class="small">A New Way of Life Reentry Project provides housing, case management, pro bono legal
+                  <p class="big">Promotional Websites</p>
+                  <p class="small"> Project provides housing, case management, pro bono legal
                     services, advocacy and leadership
                     development for women rebuilding their lives after prison.</p>
                   <p class="small">The Projet was built from scratch and was designed by me. It has everything a
                     website needs for promotion</p>
                 </div>
               </div>
-              <a href="http://anewwayoflife.org/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+              <a href="" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
                 Explore </a>
             </div>
             <div class="project">
@@ -99,7 +99,7 @@
             <div class="project">
               <div class="inline-icon"> <i class="fas fa-mobile-alt"></i>
                 <div class="side-details">
-                  <p class="big">Arttiee Hybrid app *</p>
+                  <p class="big">Tracker App</p>
                   <p class="small">App built in react native for location tracking for bus to make the life of students
                     and parents easy</p>
                   <p class="small">It was built from scratch with all the wireframes and concepts.</p>
