remove: some content

--- a/index.html
+++ b/index.html
@@ -61,25 +61,18 @@
             <div class="project">
               <div class="inline-icon"> <i class="fas fa-desktop"></i>
                 <div class="side-details">
-                  <p class="big">Digital Marketing</p>
-                  <p class="small">MediaBanks is a digital marketing agency located just north of Indianapolis, Indiana
-                    in the suburbs of Fishers. </p>
-                  <p class="small">The Projet was built from scratch and was delievered in a tight timeline. Since they
-                    are a digital marketing agency, the site needed to be attractive and ambigous</p>
+                  <p class="big">Digital Marketing Websites</p>
+                  <p class="small">Multiple working websites built using SASS and Bootstrap</p>
                 </div>
               </div>
-              <a href="" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
+              <a href="https://sudhirkumarojhaa.github.io/crosswire/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
                 Explore </a>
             </div>
             <div class="project">
               <div class="inline-icon"> <i class="fas fa-desktop"></i>
                 <div class="side-details">
                   <p class="big">Promotional Websites</p>
-                  <p class="small"> Project provides housing, case management, pro bono legal
-                    services, advocacy and leadership
-                    development for women rebuilding their lives after prison.</p>
-                  <p class="small">The Projet was built from scratch and was designed by me. It has everything a
-                    website needs for promotion</p>
+                  <p class="small">Built some sites which required extensive use of animation and illustrations </p>
                 </div>
               </div>
               <a href="" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
@@ -96,40 +89,7 @@
               <a href="https://sudhirkumarojhaa.github.io/Space-war/" target="_blank" class="link"> <i class="fas fa-external-link-alt"></i>
                 Explore </a>
             </div>
-            <div class="project">
-              <div class="inline-icon"> <i class="fas fa-mobile-alt"></i>
-                <div class="side-details">
-                  <p class="big">Tracker App</p>
-                  <p class="small">App built in react native for location tracking for bus to make the life of students
-                    and parents easy</p>
-                  <p class="small">It was built from scratch with all the wireframes and concepts.</p>
-                </div>
-              </div>
-            </div>
-            <div class="project">
-              <div class="inline-icon"> <i class="fas fa-paint-brush"></i>
-                <div class="side-details">
-                <p class="big">Design</p>
-                 <p class="small">These are some designs built using HTML CSS and some of my photographs.</p>
-                 <p class="small">No design tool were used in making of these book covers.</p>
-                </div>
-              </div>
-              <a class="link" href="https://www.behance.net/gallery/69856707/Magazine-Cover-Design-(HTMLCSS)" target="_blank"><i class="fas fa-external-link-alt"></i>
-              Explore </a>
-            </div>
 
-            <div class="project">
-              <div class="inline-icon"> <i class="fab fa-github"></i>
-                <div class="side-details">
-                  <p class="big">Other Work</p>
-                  <p class="small">Here is my github account link where you can find various small and big projects
-                    which were built using either React or React Native. Please click on explore to explore my github
-                    account.
-                </div>
-              </div>
-              <a class="link" href="https://github.com/sudhirkumarojhaa" target="_blank"><i class="fas fa-external-link-alt"></i>
-                Explore </a>
-            </div>
           </div>
         </div>
       </div>
